[project]
name = "yoto-dl"
version = "0.1.0"
description = "Yoto audio downloader."
authors = [
    {name = "Matthew J. Lenzo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "yt-dlp (>=2025.5.22,<2026.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "progress (>=1.6,<2.0)"
]

[project.scripts]
yoto = "yoto_dl.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

